<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('payments', function (Blueprint $table) {
            $table->id();
            $table->foreignId('order_id')->constrained()->onDelete('cascade'); // relasi ke tabel orders
            $table->string('payment_method');  // Metode pembayaran, misalnya kartu, transfer bank, dll.
            $table->decimal('amount', 10, 2);  // Jumlah pembayaran
            $table->string('status')->default('pending'); // Status pembayaran, bisa 'pending', 'completed', dll.
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('payments');
    }
};
